[gd_scene load_steps=7 format=3 uid="uid://b61l0tnedpy2o"]

[ext_resource type="Script" path="res://src/world/PuzzlePieces/Redirector/redirector.gd" id="1_pocly"]
[ext_resource type="AudioStream" uid="uid://dyj7tvdut4ntx" path="res://src/world/PuzzlePieces/Redirector/sfx/wind.mp3" id="2_46d67"]

[sub_resource type="SphereShape3D" id="SphereShape3D_hhni4"]
radius = 0.1

[sub_resource type="CapsuleMesh" id="CapsuleMesh_hukts"]
radius = 0.003
height = 0.1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mdy8y"]
transparency = 1
albedo_color = Color(1, 1, 1, 0)

[sub_resource type="PlaneMesh" id="PlaneMesh_wdgv5"]
material = SubResource("StandardMaterial3D_mdy8y")
size = Vector2(3, 3)

[node name="Redirector" type="Area3D"]
collision_layer = 0
collision_mask = 65535
script = ExtResource("1_pocly")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_hhni4")

[node name="OriginMarker" type="Marker3D" parent="."]

[node name="DirectionMarker" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)

[node name="AudioPlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_46d67")
volume_db = 80.0
bus = &"SFX"

[node name="CPUParticles3D" type="CPUParticles3D" parent="."]
amount = 36
lifetime = 1.5
mesh = SubResource("CapsuleMesh_hukts")
emission_shape = 1
emission_sphere_radius = 0.2
particle_flag_align_y = true
direction = Vector3(0, 0, 1)
spread = 10.0
flatness = 0.1
gravity = Vector3(0, 0, 0)
initial_velocity_min = 0.1
initial_velocity_max = 1.0
angular_velocity_min = 1.0
angular_velocity_max = 1.0
tangential_accel_min = 1.0
tangential_accel_max = 1.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, -2.98023e-08, 0, 2.98023e-08, 1, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("PlaneMesh_wdgv5")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
